# cross-tool-statistical-verification

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CLAUDE.md  CONFIDENTIALITY.md  LICENSE  README.md  mkdocs.yml  mkdocs_hooks.py  pyproject.toml  requirements.txt  verify.py
.dev/tasks/: .gitkeep  1_Security_review:_hardening_recommendations_(no_critical_issues_found).md  1_Security_review_hardening_recommendations.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
crossverify/: __init__.py  api.py  checks.py  cli.py  config.py  consistency.py  intake.py  mcp_server.py  report.py  reproduce.py  runner.py  transforms.py  triangulate.py
demo/: README.md  app.R
demo/rsconnect/shinyapps.io/olivercrocco/: ctsv-demo.dcf
docs/: PROTOCOL.md  index.md  mcp.md  requirements.txt
docs/reference/: api.md  checks.md  cli.md  config.md  consistency.md  intake.md  mcp_server.md  report.md  reproduce.md  runner.md  transforms.md  triangulate.md
examples/: README.md  analysis.R  analysis.py  project.yaml
r/: crossverify.R
templates/: methodology_statement.md
tests/: test_api.py  test_checks.py  test_hardening.py  test_mcp.py  test_triage_skill.py
