[project]
name = "crossverify"
dynamic = ["version"]
description = "A six-phase verification harness for statistical analysis, with Python-vs-R cross-tool triangulation."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Oliver S. Crocco" },
]
keywords = [
    "reproducibility",
    "computational reproducibility",
    "statistical analysis",
    "verification",
    "cross-tool triangulation",
    "Python",
    "R",
    "open science",
    "research software",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]

# Pinned to the same compatible ranges the retired requirements.txt used,
# so installs stay reproducible.
dependencies = [
    "PyYAML>=6,<7",
    "pandas>=2,<3",
    "statsmodels>=0.14,<1",
]

[project.scripts]
crossverify = "crossverify.cli:main"

[project.urls]
Homepage = "https://github.com/WarderHouse/cross-tool-statistical-verification"
Documentation = "https://cross-tool-statistical-verification.readthedocs.io/"
Repository = "https://github.com/WarderHouse/cross-tool-statistical-verification"
Issues = "https://github.com/WarderHouse/cross-tool-statistical-verification/issues"

[dependency-groups]
# Development tooling, installed by default with `uv sync`.
dev = [
    "pytest>=8",
    # Pinned exactly to match .pre-commit-config.yaml (rev: v0.15.16) so local
    # pre-commit and CI `ruff format --check` can never disagree on formatting.
    "ruff==0.15.16",
]
# Docs toolchain. Not installed by default; the docs build requests it explicitly
# (`uv run --only-group docs ...`), so it pulls neither the runtime stack nor R —
# mkdocstrings reads the source statically via griffe. Pinned to the tested minor.
docs = [
    "mkdocs-material>=9.7.6,<9.8",
    "mkdocstrings[python]>=0.30.1,<0.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
# Single source of truth: crossverify/__init__.py's __version__.
path = "crossverify/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["crossverify"]
# Ship the non-Python runtime data files (R helper + methodology template) that
# live inside the package; without this hatchling would include only .py files,
# and Phase 5 / Phase 6 would break in a built wheel.
artifacts = [
    "crossverify/crossverify.R",
    "crossverify/methodology_statement.md",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# E/F = pycodestyle + pyflakes, I = import sorting, UP = pyupgrade, B = bugbear.
# Line length is enforced by the formatter, so E501 is ignored here to avoid
# `# noqa` litter on unsplittable strings/URLs.
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
